--- a/simulador/dados/dados.html
+++ b/simulador/dados/dados.html
@@ -20,49 +20,75 @@
     <main>
         <p id="p-dados">Agora precisamos dos seus dados.</p>
         <form id="meu-formulario">
-            <div class="form-group">
-                <label for="nome-completo">Nome completo</label>
-                <input type="text" id="nome-completo" name="nome-completo" placeholder="Nome completo" required>
+            <div id="form-sections">
+                <!-- Seção principal dos campos -->
+                <div class="form-section">
+                    <div class="form-group">
+                        <label for="nome-completo">Nome completo</label>
+                        <input type="text" id="nome-completo" name="nome-completo" placeholder="Nome completo" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="cpf">CPF</label>
+                        <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" maxlength="14" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="data-nascimento">Data de Nascimento</label>
+                        <input type="text" id="data-nascimento" name="data-nascimento" placeholder="00/00/0000" maxlength="10" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="whatsapp">Whatsapp</label>
+                        <input type="text" id="whatsapp" name="whatsapp" placeholder="(00) 00000-0000" maxlength="15" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="cep">CEP</label>
+                        <input type="text" id="cep" name="cep" placeholder="00000-000" maxlength="9" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="estado">Estado</label>
+                        <input type="text" id="estado" name="estado" placeholder="Estado" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="cidade">Cidade</label>
+                        <input type="text" id="cidade" name="cidade" placeholder="Cidade" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="bairro">Bairro</label>
+                        <input type="text" id="bairro" name="bairro" placeholder="Bairro" required>
+                    </div>
+                    <div class="form-group">
+                        <label for="rua">Rua</label>
+                        <input type="text" id="rua" name="rua" placeholder="Rua" required>
+                    </div>            
+                    <div class="form-group">
+                        <label for="numero">Número</label>
+                        <input type="text" id="numero" name="numero" placeholder="Número" required>
+                    </div>
+                </div>
             </div>
-            <div class="form-group">
-                <label for="cpf">CPF</label>
-                <input type="text" id="cpf" name="cpf" placeholder="000.000.000-00" maxlength="14" required>
+
+            <!-- Adicionar checkbox para Estado Civil -->
+            <div class="estado-civil-container">
+                <label>Estado Civil:</label>
+                <input type="radio" id="solteiro" name="estado-civil" value="solteiro" checked>
+                <label for="solteiro">Solteiro</label>
+
+                <input type="radio" id="casado" name="estado-civil" value="casado">
+                <label for="casado">Casado</label>
+
+                <input type="radio" id="divorciado" name="estado-civil" value="divorciado">
+                <label for="divorciado">Divorciado</label>
+
+                <input type="radio" id="viuvo" name="estado-civil" value="viuvo">
+                <label for="viuvo">Viúvo</label>
+
+                <input type="radio" id="uniao-estavel" name="estado-civil" value="uniao-estavel">
+                <label for="uniao-estavel">União Estável</label>
             </div>
-            <div class="form-group">
-                <label for="data-nascimento">Data de Nascimento</label>
-                <input type="text" id="data-nascimento" name="data-nascimento" placeholder="00/00/0000" maxlength="10" required>
+
+            <div class="btn-container">
+                <button type="submit">Enviar</button>
+                <button type="button" class="btn-back" onclick="history.back()">Voltar</button>
             </div>
-            <div class="form-group">
-                <label for="whatsapp">Whatsapp</label>
-                <input type="text" id="whatsapp" name="whatsapp" placeholder="(00) 00000-0000" maxlength="15" required>
-            </div>
-            <div class="form-group">
-                <label for="cep">CEP</label>
-                <input type="text" id="cep" name="cep" placeholder="00000-000" maxlength="9" required>
-            </div>
-            <div class="form-group">
-                <label for="estado">Estado</label>
-                <input type="text" id="estado" name="estado" placeholder="Estado" required>
-            </div>
-            <div class="form-group">
-                <label for="cidade">Cidade</label>
-                <input type="text" id="cidade" name="cidade" placeholder="Cidade" required>
-            </div>
-            <div class="form-group">
-                <label for="bairro">Bairro</label>
-                <input type="text" id="bairro" name="bairro" placeholder="Bairro" required>
-            </div>
-            <div class="form-group">
-                <label for="rua">Rua</label>
-                <input type="text" id="rua" name="rua" placeholder="Rua" required>
-            </div>            
-            <div class="form-group">
-                <label for="numero">Número</label>
-                <input type="text" id="numero" name="numero" placeholder="Número" required>
-            </div>
-            <button type="submit">Enviar</button>
-            <button type="button" class="btn-back" onclick="history.back()">Voltar</button>
-        </div> 
         </form>
     </main>
 
