--- a/simulador/dados/dados.html
+++ b/simulador/dados/dados.html
@@ -66,7 +66,7 @@
                 </div>
             </div>
 
-            <!-- Adicionar checkbox para Estado Civil -->
+            <!-- Adicionar opções para Estado Civil -->
             <div class="estado-civil-container">
                 <label>Estado Civil:</label>
                 <input type="radio" id="solteiro" name="estado-civil" value="solteiro" checked>
@@ -83,6 +83,27 @@
 
                 <input type="radio" id="uniao-estavel" name="estado-civil" value="uniao-estavel">
                 <label for="uniao-estavel">União Estável</label>
+            </div>
+
+            <!-- Contêiner para os campos do cônjuge (vazio inicialmente) -->
+            <div id="conjuge-container" class="form-section" style="display: none;">
+                <h3>Dados do Cônjuge</h3>
+                <div class="form-group">
+                    <label for="nome-completo-conjuge">Nome Completo (Cônjuge)</label>
+                    <input type="text" id="nome-completo-conjuge" name="nome-completo-conjuge" placeholder="Nome completo">
+                </div>
+                <div class="form-group">
+                    <label for="cpf-conjuge">CPF (Cônjuge)</label>
+                    <input type="text" id="cpf-conjuge" name="cpf-conjuge" placeholder="000.000.000-00" maxlength="14">
+                </div>
+                <div class="form-group">
+                    <label for="data-nascimento-conjuge">Data de Nascimento (Cônjuge)</label>
+                    <input type="text" id="data-nascimento-conjuge" name="data-nascimento-conjuge" placeholder="00/00/0000" maxlength="10">
+                </div>
+                <div class="form-group">
+                    <label for="whatsapp-conjuge">Whatsapp (Cônjuge)</label>
+                    <input type="text" id="whatsapp-conjuge" name="whatsapp-conjuge" placeholder="(00) 00000-0000" maxlength="15">
+                </div>
             </div>
 
             <div class="btn-container">
