--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WeCred Assessoria</title>
     <link rel="stylesheet" href="styles.css">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon_io/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="favicon-32x32.png">
 
 </head>
 <body>
@@ -16,7 +16,7 @@
                 <img src="images/logo-preto-wecred_edited.webp" alt="WeCred Assessoria Logo">
             </div>
             <nav class="navbar">
-                <ul>
+                <ul id="menu-items">
                     <li><a href="#home">Início</a></li>
                     <li><a href="#services">Serviços</a></li>
                     <li><a href="#specialized">Custo</a></li>
@@ -25,6 +25,9 @@
                     <li><a href="#contact">Contato</a></li>
                 </ul>
             </nav>
+            <div class="menu-toggle" id="mobile-menu">
+                &#9776; <!-- Símbolo do "hamburger" -->
+            </div>
         </div>
     </header>                   
 
@@ -206,5 +209,16 @@
     <a href="https://wa.me/+5511953528660?text=Olá,%20gostaria%20de%20mais%20informações%20sobre%20os%20serviços%20da%20WeCred%20Assessoria." class="whatsapp-float" target="_blank">
         <img src="images/whatsapp.png" alt="WhatsApp">
     </a>
+
+    <script>
+        // Script para menu hamburger
+        const mobileMenu = document.getElementById('mobile-menu');
+        const menuItems = document.getElementById('menu-items');
+    
+        mobileMenu.addEventListener('click', () => {
+            menuItems.classList.toggle('active'); // Alterna a classe para mostrar ou esconder o menu
+        });
+    </script>
+    
 </body>
 </html>
